# HLSL2021

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
HLSL2021/: CMakeLists.txt
HLSL2021/Shader/: 01_strict_casting.hlsl  02_logical_operator.hlsl  03_loop_scoping_rules.hlsl  04_template_function.hlsl  05_member_operator_overloading.hlsl  06_bitfield.hlsl
HLSL2021/Source/Private/: Main.cpp
SampleProject/: CMakeLists.txt
UnitTest/: CMakeLists.txt
